--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
+      name="google-site-verification"
+      content="TE5L4MC29A0HpL-GWKZOxXWuTib6owXci3tOfmoN80g"
+    />
+    <meta
       name="description"
       content="심심풀이 땅콩처럼 가벼운 주제로 친구들과 즐기는 단체 대화주제 제공 서비스"
     />
